@@ -40,6 +40,11 @@ com.openexchange.imap.imapConnectionTimeout=20000
 # A value less or equal to zero disables this setting.
 com.openexchange.imap.imapTemporaryDown=10000
 
+# The number of milliseconds a failed authentication attempt is cached
+# to faster handle subsequent authentication attempts
+# Default is 10 seconds.
+com.openexchange.imap.failedAuthTimeout=10000
+
 # Define the encoding for IMAP authentication
 com.openexchange.imap.imapAuthEnc=UTF-8
 
